tests/out/error/mutability/ident.in.bt
struct Static {}

fun change(mut s Static) {}

fun call() {
	s := Static{}
	change(mut s) // err
}

arr := [1, 2]

for mut a in arr {}
